fix newsletter align

--- a/incluyete-movil/assets/css/pages/home.css
+++ b/incluyete-movil/assets/css/pages/home.css
@@ -134,10 +134,6 @@
     color: var(--bg-color);
 }
 
-#newsletter p {
-    text-align: center;
-}
-
 #newsletter form {
     width: 100%;
     display: flex;
